<resources>
    <string name="app_name">Shoping List</string>
    <string name="add_new_shopping_item">Add new shopping item</string>
    <string name="item">Item</string>
    <string name="amount">Amount</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="default_item_name">Item</string>
    <string name="default_item_amount">1</string>
</resources>